# bmodbus

./: .gitignore  CMakeLists.txt  License.md  README.md  bmodbus.c  bmodbus.cppcheck  bmodbus.h  bmodbus_internals.h  main.c
.github/workflows/: 8051.yml  ATmega AVR.yml  Arm_Cortex M0.yml  Arm_Cortex M33.yml  Arm_Cortex M4.yml  RISCV Hazard3.yml  Xtensa LX6.yml  Xtensa LX7.yml  cmake-big-endian-tests.yml  cmake-single-platform.yml  deploy_doxygen.yml  embedded-build.yml
docs/: Doxyfile
examples/basic_client/: basic_client.c  basic_client.h  bmb_config.h
tests/: test_runner.c
tests/arduino/: CMakeLists.txt  arduino-tooling.cmake  run_my_program.py
tests/arduino/8051_client/: 8051.md  8051_client.ino  interactive_tests.py
tests/arduino/arduino_client_example/: .gitignore  arduino_client_example.ino  interactive_tests.py
tests/arduino/arduino_unit_tests/: .gitignore  arduino_unit_tests.ino  interactive_tests.py  unity_config.h
tests/client/: bmb_config.h  test_bmodbus_client.c
tests/unity/: README.md
